--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-indiana-drag-scroll": "^2.2.0",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "swiper": "^8.4.2",
